Screen reader friendly

--- a/src/templates/datetimepicker.html
+++ b/src/templates/datetimepicker.html
@@ -1,4 +1,5 @@
 <div class="datetimepicker table-responsive">
+    <span class="sr-only">Beginning of date time picker dialog content</span>    
     <table class="table table-condensed  {{ data.currentView }}-view">
         <thead>
         <tr>
@@ -35,4 +36,5 @@
         </tr>
         </tbody>
     </table>
+    <span class="sr-only">End of date time picker dialog content</span>    
 </div>
